--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Jonard Gan</title>
     <meta name="description" content="Jonard Gan is a passionate Frontend Engineer, dedicated to crafting aesthetic and modern apps that captivate and engage users.">
-    <link rel="icon" type="image/png" href="/Image/favCon.jpg">
+    <link rel="icon" type="image/png" href="Image/favCon.jpg">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="/Image/BusinessAttire.png" alt="Jonard Gan">
+                    <img src="Image/BusinessAttire.png" alt="Jonard Gan">
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
             <div class="about-content">
                 <div class="about-image-wrapper">
                     <div class="about-image">
-                        <img src="/Image/Picture ko.png" alt="Jonard Gan">
+                        <img src="Image/Picture ko.png" alt="Jonard Gan">
                     </div>
                     <!-- Contact Card -->
                     <div class="about-contact-card">
@@ -368,7 +368,7 @@
                 <!-- Certificate 1 -->
                 <div class="certificate-card">
                     <div class="certificate-image">
-                        <img src="/Image/Cert_1_Bicol IT Students Congress (BITSCON) 2024.png" alt="Certificate Title 1">
+                        <img src="Image/Cert_1_Bicol IT Students Congress (BITSCON) 2024.png" alt="Certificate Title 1">
                         <div class="certificate-overlay">
                             <i class='bx bx-show'></i>
                         </div>
@@ -388,7 +388,7 @@
                 <!-- Certificate 2 -->
                 <div class="certificate-card">
                     <div class="certificate-image">
-                        <img src="/Image/Cert_2_dIScover Navigating Realms of UXUI Design.png" alt="Certificate Title 2">
+                        <img src="Image/Cert_2_dIScover Navigating Realms of UXUI Design.png" alt="Certificate Title 2">
                         <div class="certificate-overlay">
                             <i class='bx bx-show'></i>
                         </div>
@@ -408,7 +408,7 @@
                 <!-- Certificate 3 -->
                 <div class="certificate-card">
                     <div class="certificate-image">
-                        <img src="/Image/Cert_3_IS WEB 3.0 Exploring Innovations in Web Development.jpg" alt="Certificate Title 3">
+                        <img src="Image/Cert_3_IS WEB 3.0 Exploring Innovations in Web Development.jpg" alt="Certificate Title 3">
                         <div class="certificate-overlay">
                             <i class='bx bx-show'></i>
                         </div>
@@ -487,52 +487,52 @@
                         </svg>
 
                         <div class="skill-card" data-skill="HTML5" data-description="Proficient in semantic HTML5 markup. I build clean, accessible web structures with proper element hierarchy.">
-                            <img src="/Image/SVG/html5.svg" alt="HTML5">
+                            <img src="Image/SVG/html5.svg" alt="HTML5">
                         </div>
                         <div class="skill-card" data-skill="CSS3" data-description="Skilled in responsive design and modern CSS. I craft smooth animations and polished interfaces.">
-                            <img src="/Image/SVG/css3.svg" alt="CSS3">
+                            <img src="Image/SVG/css3.svg" alt="CSS3">
                         </div>
                         <div class="skill-card" data-skill="JavaScript" data-description="Comfortable with vanilla JavaScript. I handle DOM manipulation, form validation, and interactive features.">
-                            <img src="/Image/SVG/JavaScript.svg" alt="JavaScript">
+                            <img src="Image/SVG/JavaScript.svg" alt="JavaScript">
                         </div>
                         <div class="skill-card" data-skill="Java" data-description="Experienced in Java for Android. I build mobile apps with intuitive UIs and efficient data handling.">
-                            <img src="/Image/SVG/java.svg" alt="Java">
+                            <img src="Image/SVG/java.svg" alt="Java">
                         </div>
                         <div class="skill-card" data-skill="Android Development" data-description="Capable of full Android app development. I handle UI design, quiz systems, and educational functionality.">
-                            <img src="/Image/SVG/android.svg" alt="Android">
+                            <img src="Image/SVG/android.svg" alt="Android">
                         </div>
                         <div class="skill-card" data-skill="Python" data-description="Familiar with Python programming. I use it for logic-based tasks and academic projects.">
-                            <img src="/Image/SVG/python.svg" alt="Python">
+                            <img src="Image/SVG/python.svg" alt="Python">
                         </div>
                         <div class="skill-card" data-skill="VS Code" data-description="My primary code editor. I leverage extensions, debugging tools, and Git integration daily.">
-                            <img src="/Image/SVG/vscode.svg" alt="VS Code">
+                            <img src="Image/SVG/vscode.svg" alt="VS Code">
                         </div>
                         <div class="skill-card" data-skill="PHP" data-description="Proficient in server-side PHP. I develop backend systems, handle databases, and build dynamic applications.">
-                            <img src="/Image/SVG/php.svg" alt="PHP">
+                            <img src="Image/SVG/php.svg" alt="PHP">
                         </div>
                         <div class="skill-card" data-skill="MySQL" data-description="Knowledgeable in database design. I create efficient structures and write optimized queries.">
-                            <img src="/Image/SVG/mysql-logo-svgrepo-com.svg" alt="MySQL">
+                            <img src="Image/SVG/mysql-logo-svgrepo-com.svg" alt="MySQL">
                         </div>
                         <div class="skill-card" data-skill="Microsoft Office" data-description="Proficient with Office suite. I create documentation, presentations, and organize project data.">
-                            <img src="/Image/SVG/Microsoft-365.svg" alt="Office">
+                            <img src="Image/SVG/Microsoft-365.svg" alt="Office">
                         </div>
                         <div class="skill-card" data-skill="Canva" data-description="Skilled at graphic design. I create branding materials and visual assets for presentations.">
-                            <img src="/Image/SVG/canva.svg" alt="Canva">
+                            <img src="Image/SVG/canva.svg" alt="Canva">
                         </div>
                         <div class="skill-card" data-skill="CapCut" data-description="Experienced in video editing. I create engaging demo videos with transitions and effects.">
-                            <img src="/Image/SVG/capcut.svg" alt="Capcut">
+                            <img src="Image/SVG/capcut.svg" alt="Capcut">
                         </div>
                         <div class="skill-card" data-skill="Kotlin" data-description="Learning modern Android with Kotlin. I appreciate its concise syntax and null-safety features.">
-                            <img src="/Image/SVG/kotlin.svg" alt="Kotlin">
+                            <img src="Image/SVG/kotlin.svg" alt="Kotlin">
                         </div>
                         <div class="skill-card" data-skill="GitHub" data-description="Experienced with version control. I manage repositories and maintain clean project history.">
-                            <img src="/Image/SVG/github.svg" alt="GitHub">
+                            <img src="Image/SVG/github.svg" alt="GitHub">
                         </div>
                         <div class="skill-card" data-skill="Firebase" data-description="Familiar with Firebase services. I integrate real-time databases, authentication, and cloud storage.">
-                            <img src="/Image/SVG/firebase.svg" alt="Firebase">
+                            <img src="Image/SVG/firebase.svg" alt="Firebase">
                         </div>
                         <div class="skill-card" data-skill="Figma" data-description="Capable of UI/UX design. I create wireframes, mockups, and interactive prototypes.">
-                            <img src="/Image/SVG/figma.svg" alt="Figma">
+                            <img src="Image/SVG/figma.svg" alt="Figma">
                         </div>
                     </div>
                 </div>
@@ -567,7 +567,7 @@
                             </div>
                         </div>
                         <div class="browser-content">
-                            <img src="/Image/VPES-SIMS.png" alt="VPES-SIMS" class="project-image">
+                            <img src="Image/VPES-SIMS.png" alt="VPES-SIMS" class="project-image">
                         </div>
                     </div>
 
@@ -580,12 +580,12 @@
 
                         <!-- Tech Stack Icons -->
                         <div class="project-stack">
-                            <img src="/Image/SVG/php.svg" alt="PHP" title="PHP">
-                            <img src="/Image/SVG/mysql-logo-svgrepo-com.svg" alt="MySQL" title="MySQL">
-                            <img src="/Image/SVG/firebase.svg" alt="Firebase" title="Firebase">
-                            <img src="/Image/SVG/html5.svg" alt="HTML5" title="HTML5">
-                            <img src="/Image/SVG/css3.svg" alt="CSS3" title="CSS3">
-                            <img src="/Image/SVG/JavaScript.svg" alt="JavaScript" title="JavaScript">
+                            <img src="Image/SVG/php.svg" alt="PHP" title="PHP">
+                            <img src="Image/SVG/mysql-logo-svgrepo-com.svg" alt="MySQL" title="MySQL">
+                            <img src="Image/SVG/firebase.svg" alt="Firebase" title="Firebase">
+                            <img src="Image/SVG/html5.svg" alt="HTML5" title="HTML5">
+                            <img src="Image/SVG/css3.svg" alt="CSS3" title="CSS3">
+                            <img src="Image/SVG/JavaScript.svg" alt="JavaScript" title="JavaScript">
                         </div>
 
                         <div class="project-links-label">Project Links</div>
@@ -614,7 +614,7 @@
                             </div>
                         </div>
                         <div class="browser-content">
-                            <img src="/Image/Liham-cafe-v2.png" alt="Liham Cafe V2" class="project-image">
+                            <img src="Image/Liham-cafe-v2.png" alt="Liham Cafe V2" class="project-image">
                         </div>
                     </div>
 
@@ -627,11 +627,11 @@
 
                         <!-- Tech Stack Icons -->
                         <div class="project-stack">
-                            <img src="/Image/SVG/php.svg" alt="PHP" title="PHP">
-                            <img src="/Image/SVG/mysql-logo-svgrepo-com.svg" alt="MySQL" title="MySQL">
-                            <img src="/Image/SVG/html5.svg" alt="HTML5" title="HTML5">
-                            <img src="/Image/SVG/css3.svg" alt="CSS3" title="CSS3">
-                            <img src="/Image/SVG/JavaScript.svg" alt="JavaScript" title="JavaScript">
+                            <img src="Image/SVG/php.svg" alt="PHP" title="PHP">
+                            <img src="Image/SVG/mysql-logo-svgrepo-com.svg" alt="MySQL" title="MySQL">
+                            <img src="Image/SVG/html5.svg" alt="HTML5" title="HTML5">
+                            <img src="Image/SVG/css3.svg" alt="CSS3" title="CSS3">
+                            <img src="Image/SVG/JavaScript.svg" alt="JavaScript" title="JavaScript">
                         </div>
 
                         <div class="project-links-label">Project Links</div>
@@ -659,7 +659,7 @@
                             </div>
                         </div>
                         <div class="browser-content">
-                            <img src="/Image/atomuklas.png" alt="Atomuklas" class="project-image">
+                            <img src="Image/atomuklas.png" alt="Atomuklas" class="project-image">
                         </div>
                     </div>
 
@@ -670,8 +670,8 @@
                         </p>
 
                         <div class="project-stack">
-                            <img src="/Image/SVG/java.svg" alt="Java" title="Java">
-                            <img src="/Image/SVG/kotlin.svg" alt="Kotlin" title="Kotlin">
+                            <img src="Image/SVG/java.svg" alt="Java" title="Java">
+                            <img src="Image/SVG/kotlin.svg" alt="Kotlin" title="Kotlin">
                         </div>
 
                         <div class="project-links-label">Project Links</div>
@@ -699,7 +699,7 @@
                             </div>
                         </div>
                         <div class="browser-content">
-                            <img src="/Image/anaphymasters.png" alt="AnaphyMaster" class="project-image">
+                            <img src="Image/anaphymasters.png" alt="AnaphyMaster" class="project-image">
                         </div>
                     </div>
 
@@ -710,8 +710,8 @@
                         </p>
 
                         <div class="project-stack">
-                            <img src="/Image/SVG/java.svg" alt="Java" title="Java">
-                            <img src="/Image/SVG/kotlin.svg" alt="Kotlin" title="Kotlin">
+                            <img src="Image/SVG/java.svg" alt="Java" title="Java">
+                            <img src="Image/SVG/kotlin.svg" alt="Kotlin" title="Kotlin">
                         </div>
 
                         <div class="project-links-label">Project Links</div>
@@ -739,7 +739,7 @@
                             </div>
                         </div>
                         <div class="browser-content">
-                            <img src="/Image/sample.png" alt="PassCSE" class="project-image">
+                            <img src="Image/sample.png" alt="PassCSE" class="project-image">
                         </div>
                     </div>
 
@@ -750,7 +750,7 @@
                         </p>
 
                         <div class="project-stack">
-                            <img src="/Image/SVG/java.svg" alt="Java" title="Java">
+                            <img src="Image/SVG/java.svg" alt="Java" title="Java">
                         </div>
 
                         <div class="project-links-label">Project Links</div>
@@ -778,7 +778,7 @@
                             </div>
                         </div>
                         <div class="browser-content">
-                            <img src="/Image/Liham-cafe-v1.png" alt="Liham Cafe V1" class="project-image">
+                            <img src="Image/Liham-cafe-v1.png" alt="Liham Cafe V1" class="project-image">
                         </div>
                     </div>
 
@@ -789,9 +789,9 @@
                         </p>
 
                         <div class="project-stack">
-                            <img src="/Image/SVG/html5.svg" alt="HTML5" title="HTML5">
-                            <img src="/Image/SVG/css3.svg" alt="CSS3" title="CSS3">
-                            <img src="/Image/SVG/JavaScript.svg" alt="JavaScript" title="JavaScript">
+                            <img src="Image/SVG/html5.svg" alt="HTML5" title="HTML5">
+                            <img src="Image/SVG/css3.svg" alt="CSS3" title="CSS3">
+                            <img src="Image/SVG/JavaScript.svg" alt="JavaScript" title="JavaScript">
                         </div>
 
                         <div class="project-links-label">Project Links</div>
