--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
             </a>
 
             <div class="header-right">
-                <!-- Sound Bar (optional - works without music file) -->
-                <div class="soundbar link" style="display: none;">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <!-- Sound Bar -->
+                <div class="soundbar-wrapper link">
+                    <div class="soundbar">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
+
+                <audio id="background-music" src="assets/soundeffect/song.mp3" loop></audio>
 
                 <!-- Theme Toggle -->
                 <button class="theme-toggle link" aria-label="Toggle Theme">
@@ -97,7 +101,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        Hi, I'm <span class="text-gradient">Jonard Gan</span>
+                        Hi, I'm <span class="hero-name-gradient">Jonard Gan</span>
                     </h1>
                     <h2 class="hero-subtitle">
                         <span class="subtitle-prefix">I am a </span><span class="typed-text"></span><span class="cursor-blink">|</span>
@@ -217,7 +221,7 @@
     </section>
 
     <!-- Academic Achievements Section -->
-    <section class="achievements section" id="achievements">
+    <section class="achievements section achievements-section" id="achievements">
         <div class="section-container">
             <div class="section-header">
                 <h2 class="section-title">My Academic Achievements</h2>
