--- a/index.html
+++ b/index.html
@@ -819,17 +819,17 @@
     <section class="collaboration section">
         <div class="section-container">
             <div class="collaboration-content">
-                <p class="collaboration-text-top">
-                    Software Engineering Problem Solving Software Architecture Software Engineering Problem Solving Software Architecture Software Engineering Problem Solving Software Architecture
-                </p>
+                <h2 class="collaboration-text-slide collaboration-text-top" data-scroll-animation>
+                    Do you have <span class="text-gradient-animated">Project</span> in mind?
+                </h2>
 
-                <h2 class="collaboration-title">
+                <h2 class="collaboration-text-center" data-scroll-animation>
                     Interested in <span class="text-gradient-animated">Collaboration</span>?
                 </h2>
 
-                <p class="collaboration-text-bottom">
-                    Agile Development Frontend Development React Native Development Agile Development Frontend Development React Native Development Agile Development Frontend Development
-                </p>
+                <h2 class="collaboration-text-slide collaboration-text-bottom" data-scroll-animation>
+                    Let's work <span class="text-gradient-animated">together</span>!
+                </h2>
             </div>
         </div>
     </section>
