--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                             <i class='bx bxl-gmail'></i>
                             <span>jonardgan01@gmail.com</span>
                         </div>
-                        <a href="#" class="download-cv-btn">
-                            Download CV
+                       <a href="assets/Gan, Jonard CV 2025.pdf" class="download-cv-btn" target="_blank">View CV
                         </a>
+
                     </div>
                 </div>
                 <div class="about-text">
