--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="hero" id="home">
         <!-- Social Links - Fixed on left side (desktop only) -->
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/jonardgan" class="link" target="_blank" aria-label="LinkedIn">
+            <a href="https://ph.linkedin.com/in/jonard-gan-a3656a341" class="link" target="_blank" aria-label="LinkedIn">
                 <i class='bx bxl-linkedin'></i>
             </a>
             <a href="https://github.com/D4MPYO" class="link" target="_blank" aria-label="GitHub">
@@ -90,7 +90,7 @@
             <a href="mailto:jonardgan01@gmail.com" class="link" aria-label="Email">
                 <i class='bx bxl-gmail'></i>
             </a>
-            <a href="https://www.instagram.com/" class="link" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/d4mpyo/" class="link" target="_blank" aria-label="Instagram">
                 <i class='bx bxl-instagram'></i>
             </a>
             <a href="https://web.facebook.com/nardyyy15" class="link" target="_blank" aria-label="Facebook">
@@ -119,7 +119,7 @@
 
                     <!-- Social Links for Mobile (inside hero-text) -->
                     <div class="social-links social-links-mobile">
-                        <a href="https://www.linkedin.com/in/jonardgan" class="link" target="_blank" aria-label="LinkedIn">
+                        <a href="https://ph.linkedin.com/in/jonard-gan-a3656a341" class="link" target="_blank" aria-label="LinkedIn">
                             <i class='bx bxl-linkedin'></i>
                         </a>
                         <a href="https://github.com/D4MPYO" class="link" target="_blank" aria-label="GitHub">
@@ -128,7 +128,7 @@
                         <a href="mailto:jonardgan01@gmail.com" class="link" aria-label="Email">
                             <i class='bx bxl-gmail'></i>
                         </a>
-                        <a href="https://www.instagram.com/" class="link" target="_blank" aria-label="Instagram">
+                        <a href="https://www.instagram.com/d4mpyo/" class="link" target="_blank" aria-label="Instagram">
                             <i class='bx bxl-instagram'></i>
                         </a>
                         <a href="https://web.facebook.com/nardyyy15" class="link" target="_blank" aria-label="Facebook">
@@ -932,7 +932,7 @@
 
                 <div class="footer-social">
 
-                    <a href="https://www.linkedin.com/in/jonardgan" class="link footer-social-link" target="_blank" aria-label="LinkedIn">
+                    <a href="https://ph.linkedin.com/in/jonard-gan-a3656a341" class="link footer-social-link" target="_blank" aria-label="LinkedIn">
                         <i class='bx bxl-linkedin'></i>
                         <span class="social-label">LinkedIn</span>
                     </a>
@@ -941,7 +941,7 @@
                         <span class="social-label">GitHub</span>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/jonardgan" class="link footer-social-link" target="_blank" aria-label="Email">
+                    <a href="mailto:jonardgan01@gmail.com" class="link footer-social-link" target="_blank" aria-label="Email">
                         <i class='bx bxl-gmail'></i>
                         <span class="social-label">Gmail</span>
                     </a>
@@ -950,7 +950,7 @@
                         <i class='bx bxl-facebook'></i>
                         <span class="social-label">Facebook</span>
                     </a>
-                    <a href="https://www.instagram.com/" class="link footer-social-link" target="_blank" aria-label="Instagram">
+                    <a href="https://www.instagram.com/d4mpyo/" class="link footer-social-link" target="_blank" aria-label="Instagram">
                         <i class='bx bxl-instagram'></i>
                         <span class="social-label">Instagram</span>
                     </a>
