Enhance education section with Dean's Lister mention.
Updated educational background to include Dean's Lister status.

--- a/index.html
+++ b/index.html
@@ -222,9 +222,12 @@
                     </button>
                     <div class="accordion-content">
                         <p>
-                            I am currently in my 3rd year of pursuing a <strong>Bachelor of Science in Information Systems</strong> at <strong>Camarines Norte State College</strong>.
-                            My coursework includes subjects like programming, database management, and IT fundamentals, providing a strong foundation for my career in the tech field.
+                            I am currently in my 3rd year of pursuing a <strong>Bachelor of Science in Information Systems</strong> at 
+                            <strong>Camarines Norte State College</strong>, where I became a <strong>Dean’s Lister for Academic Year 2024–2025</strong>.
+                            My coursework includes subjects like programming, database management, and IT fundamentals, providing a strong foundation 
+                            for my career in the tech field.
                         </p>
+
                     </div>
                 </div>
 
