Update project links in index.html

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
                         <div class="project-links-label">Project Links</div>
                         <div class="project-buttons">
-                            <a href="https://github.com/D4MPYO/Atomuklas" class="project-btn" target="_blank">
+                            <a href="https://github.com/D4MPYO/Atomuklas-Application" class="project-btn" target="_blank">
                                 <i class='bx bxl-github'></i>
                                 <span>Github</span>
                             </a>
@@ -741,7 +741,7 @@
 
                         <div class="project-links-label">Project Links</div>
                         <div class="project-buttons">
-                            <a href="https://github.com/D4MPYO/AnaphyMaster" class="project-btn" target="_blank">
+                            <a href="https://github.com/D4MPYO/AnaphyMaster-App" class="project-btn" target="_blank">
                                 <i class='bx bxl-github'></i>
                                 <span>Github</span>
                             </a>
