Enhance project overviews in index.html
Updated project overviews for ATOMUKLAS and ANAPHYMASTER to provide more detailed descriptions of their functionalities and development processes.

--- a/index.html
+++ b/index.html
@@ -690,9 +690,11 @@
 
                     <div class="project-info">
                         <h3 class="project-title">ATOMUKLAS</h3>
-                        <p class="project-overview">
-                            <strong>OVERVIEW:</strong> A science-focused Android app developed for educational research. Features lessons on atomic structure, 3D models, and interactive quiz games with real-time feedback.
-                        </p>
+                            <p class="project-overview">
+                                <strong>OVERVIEW:</strong> Atomuklas is a science-focused Android app developed for student clients as part of their educational research project. 
+                                The app provides comprehensive lessons on atomic structure, interactive 3D atomic models for visual learning, and engaging quiz games that reinforce key concepts. 
+                                I was responsible for designing the user interface, managing content flow, and integrating dynamic quizzes with real-time feedback to support both individual and classroom learning experiences.
+                            </p>
 
                         <div class="project-stack">
                             <img src="Image/SVG/java.svg" alt="Java" title="Java">
@@ -730,9 +732,12 @@
 
                     <div class="project-info">
                         <h3 class="project-title">ANAPHYMASTER</h3>
-                        <p class="project-overview">
-                            <strong>OVERVIEW:</strong> Mobile application for anatomy and physiology students. Features categorized quizzes, user-friendly interface, and progress tracking for medical students.
-                        </p>
+                            <p class="project-overview">
+                                <strong>OVERVIEW:</strong> AnaphyMaster is a mobile application developed for student clients as part of their research project focused on human anatomy and physiology. 
+                                The app helps students review and master key topics through categorized multiple-choice quizzes, a user-friendly interface, and result-based feedback to track learning progress. 
+                                I managed the full development cycle—from UI/UX design and question structuring to logic implementation and performance feedback—to create a focused and accessible review tool for students in the medical and allied health fields.
+                            </p>
+
 
                         <div class="project-stack">
                             <img src="Image/SVG/java.svg" alt="Java" title="Java">
