Fix formatting in project overview description
Removed unnecessary hyphen from project description.

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                             <p class="project-overview">
                                 <strong>OVERVIEW:</strong> AnaphyMaster is a mobile application developed for student clients as part of their research project focused on human anatomy and physiology. 
                                 The app helps students review and master key topics through categorized multiple-choice quizzes, a user-friendly interface, and result-based feedback to track learning progress. 
-                                I managed the full development cycle—from UI/UX design and question structuring to logic implementation and performance feedback—to create a focused and accessible review tool for students in the medical and allied health fields.
+                                I managed the full development cycle from UI/UX design and question structuring to logic implementation and performance feedback to create a focused and accessible review tool for students in the medical and allied health fields.
                             </p>
 
 
