--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="hero" id="home">
         <!-- Social Links - Fixed on left side (desktop only) -->
         <div class="social-links">
-            <a href="www.linkedin.com/in/nardgan01" class="link" target="_blank" aria-label="LinkedIn">
+            <a href="https://www.linkedin.com/in/nardgan01" class="link" target="_blank" aria-label="LinkedIn">
                 <i class='bx bxl-linkedin'></i>
             </a>
             <a href="https://github.com/D4MPYO" class="link" target="_blank" aria-label="GitHub">
@@ -119,7 +119,7 @@
 
                     <!-- Social Links for Mobile (inside hero-text) -->
                     <div class="social-links social-links-mobile">
-                        <a href="www.linkedin.com/in/nardgan01" class="link" target="_blank" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/in/nardgan01" class="link" target="_blank" aria-label="LinkedIn">
                             <i class='bx bxl-linkedin'></i>
                         </a>
                         <a href="https://github.com/D4MPYO" class="link" target="_blank" aria-label="GitHub">
@@ -940,7 +940,7 @@
 
                 <div class="footer-social">
 
-                    <a href="www.linkedin.com/in/nardgan01" class="link footer-social-link" target="_blank" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/nardgan01" class="link footer-social-link" target="_blank" aria-label="LinkedIn">
                         <i class='bx bxl-linkedin'></i>
                         <span class="social-label">LinkedIn</span>
                     </a>
